CHANGELOG
=========

MyKnowledgeBase version 4.0 - june 2016
- files style and custom-editor-style: resized all headings (including line-height)
- file style: removed line-height from several elements

MyKnowledgeBase version 3.9 - may 2016
- added file content-none 
- files 404, archive, index and search: relocated nothing found to separate file
- updated file index
- renamed both postmetadata files
- several small adjustments

MyKnowledgeBase version 3.8 - may 2016
- theme now supports post formats
- file header: updated head section
- added file content-list 
- files archive, index and search: relocated part of loop to separate file
- file index en css: changed featured post notice
- file single: changed .page-title-post into .post-title-single
- changed .sticky into .sticky-title
- several small adjustments

MyKnowledgeBase version 3.6 - april 2016
- resized all headings (thanks Tom)
- changed address tag display
- several small adjustments

MyKnowledgeBase version 3.5 - march 2016
- localized mobile menu
- mobile menu now supports 2 level subpages

MyKnowledgeBase version 3.4 - march 2016
- added file postmeta-single
- file single: relocated postmetadata to separate file
- bugfix in file custom-editor-style: removed tags from reset stylesheet
- seo improvement: blog description is h2 (thanks Tom)
- seo improvement: all page titles are h1 and all post titles are h2 (thanks Tom)
- seo improvement: all widget titles are h3 (thanks Tom)
- file single: changed title class into .page-title-post
- file header: changed class .search-title into .searchbar-title
- updated readme file to WordPress default

MyKnowledgeBase version 3.3 - march 2016
- added file postmeta
- files archive, index, search and single: relocated postmetadata to separate file
- file style and custom-editor-style: updated html tags (thanks Tom)
- updated text strings (thanks Tom)
- several small adjustments

MyKnowledgeBase version 3.2 - february 2016