@@ -10,7 +10,6 @@ if ( post_password_required() )
 ?>
 
 <div id="comments">
-
 	<?php if ( have_comments() ) : ?>
 		<h4 class="comments-title">
 			<?php printf( _n( '1 comment on %2$s', '%1$s comments on %2$s', get_comments_number(), 'myknowledgebase' ), number_format_i18n( get_comments_number() ), get_the_title() ); ?>
@@ -38,5 +37,4 @@ if ( post_password_required() )
 	<?php endif; ?>
 
 	<?php comment_form(); ?>
-
 </div>
