@@ -7,7 +7,6 @@
 
 <?php get_header(); ?>
 <div id="content-full">
-
 	<?php while ( have_posts() ) : the_post(); ?>
 
 		<h1 class="page-title"><?php the_title(); ?></h1>
@@ -27,6 +26,5 @@
 	<?php endwhile; ?>
 
 	<?php edit_post_link( __( 'Edit', 'myknowledgebase' ), '<div class="edit-link">', '</div>' ); ?>
-
 </div>	
 <?php get_footer(); ?>
